# flask-ai

./: .gitignore  README.md  commands.py  data.json  index.py  package-lock.json  package.json  pyproject.toml
routes/: hello.py  index.py
