[tool.poetry]
name = "flask-ai"
version = "0.1.0"
description = ""
authors = ["simonbeirouti <hello@simonbeirouti.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
httpx = "^0.27.0"
flask-cors = "^4.0.0"
crewai = {extras = ["tools"], version = "^0.22.5"}
flask = "^3.0.2"
setuptools = "^69.2.0"


[tool.poetry.group.dev.dependencies]
numpy = "^1.26.4"
Flask = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
